Restructure for JavaFX